--- a/DiscordClone/client-app/src/app/layout/styles.css
+++ b/DiscordClone/client-app/src/app/layout/styles.css
@@ -14,13 +14,15 @@
 }
 
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
+/*body {
+    margin: 0;
+    display: flex;
+    place-items: center;
+    min-width: 320px;
+    min-height: 100vh;
+}*/
+
+
 .MuiButtonBase-root.MuiButton-root.MuiButton-text.MuiButton-textPrimary.MuiButton-sizeMedium.MuiButton-textSizeMedium.MuiButton-colorPrimary.MuiButton-root.MuiButton-text.MuiButton-textPrimary.MuiButton-sizeMedium.MuiButton-textSizeMedium.MuiButton-colorPrimary.css-1588512-MuiButtonBase-root-MuiButton-root {
     text-decoration: none;
     color: white;
@@ -43,4 +45,10 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
+}
+
+.profil-box-c {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
